<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".clientui.ScheduleViewActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Schedule Name"
        android:id="@+id/textView"
        />


    <EditText
        android:id="@+id/editTextScheduleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/in_date"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="SELECT DATE"
            android:id="@+id/btn_date"
            android:onClick="showDatePicker"
        android:layout_alignBottom="@+id/in_date"
        android:layout_toRightOf="@+id/in_date"
        android:layout_toEndOf="@+id/in_date" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/in_time"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="SELECT TIME"
            android:id="@+id/btn_time"
            android:onClick="showTimePicker"
            android:layout_alignBottom="@+id/in_time"
            android:layout_toRightOf="@+id/in_time"
            android:layout_toEndOf="@+id/in_time" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/in_duration"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="Set duration"
            android:id="@+id/btn_duration"
            android:onClick="showDurationPicker"
            android:layout_alignBottom="@+id/in_duration"
            android:layout_toRightOf="@+id/in_duration"
            android:layout_toEndOf="@+id/in_duration" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/in_day"
            android:layout_marginTop="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="Select Days"
            android:id="@+id/btn_day"
            android:onClick="showDayOfWeekPicker"
            android:layout_alignBottom="@+id/in_day"
            android:layout_toRightOf="@+id/in_day"
            android:layout_toEndOf="@+id/in_day" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Profiles"
        android:id="@+id/profilesTextView"
        />
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create"
        android:textAllCaps="true"
        android:id="@+id/btnCreateProfile"
        android:onClick="createButtonClicked"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

</LinearLayout>