...
        <!--android:onClick="buttonClicked"/>-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Schedules"
        android:textAllCaps="true"
        android:id="@+id/btnNavigation"
        android:onClick="buttonClicked"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Profiles"
        android:textAllCaps="true"
        android:layout_below="@+id/btnNavigation"
        android:id="@+id/btnAllProfiles"
        android:onClick="buttonClicked"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>
    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:onClick="buttonClicked" android:id="@+id/btnNotificationList" android:text="Notifications" android:layout_alignParentRight="true" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_below="@+id/btnPermission" android:textAllCaps="true"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Notification"
            android:textAllCaps="true"
            android:layout_below="@+id/btnAllProfiles"
            android:id="@+id/btnCreateNotify"
            android:onClick="buttonClicked"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>

    <Button
...
