...
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Profile Name"
        android:id="@+id/textView"
        />

    <EditText
        android:id="@+id/editTextProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

...
