...
        android:layout_weight="1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show toast"
        android:textAllCaps="true"
        android:id="@+id/btnToast"
        android:onClick="buttonClicked"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>


...
